# halo2_backend

crates/noir_halo2_backend_common/: Cargo.toml
crates/noir_halo2_backend_common/src/: test_helpers.rs
crates/noir_halo2_backend_common/test_programs/0_fib/: Nargo.toml  Prover.toml
crates/noir_halo2_backend_common/test_programs/0_fib/src/: main.nr
crates/noir_halo2_backend_common/test_programs/10_check_guess/: Nargo.toml  Prover.toml
crates/noir_halo2_backend_common/test_programs/10_check_guess/src/: main.nr
crates/noir_halo2_backend_common/test_programs/12_check_line/: Nargo.toml  Prover.toml
crates/noir_halo2_backend_common/test_programs/12_check_line/src/: main.nr
crates/noir_halo2_backend_common/test_programs/13_check_square/: Nargo.toml  Prover.toml
crates/noir_halo2_backend_common/test_programs/13_check_square/src/: main.nr
crates/noir_halo2_backend_common/test_programs/14_check_column/: Nargo.toml  Prover.toml
crates/noir_halo2_backend_common/test_programs/14_check_column/src/: main.nr
crates/noir_halo2_backend_common/test_programs/15_checkcards/: Nargo.toml  Prover.toml
crates/noir_halo2_backend_common/test_programs/15_checkcards/src/: main.nr
crates/noir_halo2_backend_common/test_programs/16_pow/: Nargo.toml  Prover.toml
crates/noir_halo2_backend_common/test_programs/17_sqrt/: Nargo.toml  Prover.toml
crates/noir_halo2_backend_common/test_programs/18_mimc/: Nargo.toml  Prover.toml
crates/noir_halo2_backend_common/test_programs/19_decoder/: Nargo.toml  Prover.toml
crates/noir_halo2_backend_common/test_programs/1_check_for_collision/: Nargo.toml  Prover.toml
crates/noir_halo2_backend_common/test_programs/20_num2bits/: Nargo.toml  Prover.toml
crates/noir_halo2_backend_common/test_programs/21_sort/: Nargo.toml  Prover.toml
crates/noir_halo2_backend_common/test_programs/22_multimux1/: Nargo.toml  Prover.toml
crates/noir_halo2_backend_common/test_programs/23_bigIsEqual/: Nargo.toml  Prover.toml
crates/noir_halo2_backend_common/test_programs/2_check_ship_ranges/: Nargo.toml  Prover.toml
crates/noir_halo2_backend_common/test_programs/3_has_ship/: Nargo.toml  Prover.toml
crates/noir_halo2_backend_common/test_programs/4_check_hit/: Nargo.toml  Prover.toml
crates/noir_halo2_backend_common/test_programs/5_dotproduct/: Nargo.toml  Prover.toml
crates/noir_halo2_backend_common/test_programs/9_didSolve/: Nargo.toml  Prover.toml
crates/noir_halo2_backend_pse/: Cargo.toml
crates/noir_halo2_backend_pse/src/: circuit_translator.rs  constrains.rs  halo2_plonk_api.rs  tests.rs
crates/noir_halo2_backend_pse/src/acvm_interop/: smart_contract.rs
(+15 files in other folders)
